--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "channels-redis>=4.3.0",
     "daphne>=4.2.1",
     "django>=5.2.8",
-    "django-channels[daphne]>=0.7.0",
+    "google-api-python-client>=2.187.0",
     "gspread>=6.2.1",
     "oauth2client>=4.1.3",
     "redis>=7.1.0",
